--- a/index.html
+++ b/index.html
@@ -21,15 +21,12 @@
                 <li><a href="#projects">Projects</a></li>                
                 <li><a href="https://github.com/kristinakarrass" target="blank">Github</a></li>
                 <li><a href="https://linkedin.com/in/kristina-karrass" target="blank">Linkedin</a></li>
-                <li><a href="https://stackexchange.com/users/10015748/krikarr" target="blank">Stackoverflow</a></li>
             </ul>
             <ul class="side-nav" id="mobile-demo">
                 <li><a href="#aboutMe">About Me</a></li>
                 <li><a href="#projects">Projects</a></li>                
                 <li><a href="https://github.com/kristinakarrass" target="blank">GitHub</a></li>
                 <li><a href="https://linkedin.com/in/kristina-karrass" target="blank">Linkedin</a></li>
-                <li><a href="https://stackexchange.com/users/10015748/krikarr" target="blank">Stackoverflow</a></li>
-
             </ul>
         </div>
     </nav>
@@ -173,6 +170,21 @@
                     </div>
                 </div>
             </div>
+            <div class="col s12 m6 l4">
+                <div class="card">
+                    <div class="card-image">
+                        <a href="https://github.com/kristinakarrass/NYTimes_React" target="blank"><img src="assets/images/NYTReact.png"></a>
+                    </div>
+                    <div class="card-content">
+                        <h5>NYT MERN App</h5>
+                        <p>This app uses MongoDB, Express, React and Node. Users can search for and save articles from the New York Times archives.</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="https://nyt-reactapp.herokuapp.com/" target="blank">Check it out!</a>
+                        <a href="https://github.com/kristinakarrass/NYTimes_React" target="blank" class="right github">GitHub Repo</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="parallax-container">
@@ -189,10 +201,7 @@
                 <div class="col l4 offset-l2 s12">
                     <h5 class="grey-text text-lighten-2">Visit me on:</h5>
                     <ul>
-                        <li><a class="grey-text text-lighten-3" href="https://github.com/kristinakarrass" target="blank">GitHub</a></li>
-                        <li><a class="grey-text text-lighten-3" href="https://linkedin.com/in/kristina-karrass" target="blank">LinkedIn</a></li>
-                        <li><a class="grey-text text-lighten-3" href="https://stackexchange.com/users/10015748/krikarr" target="blank">Stackoverflow</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!"></a></li>
+                        <span><li><a class="grey-text text-lighten-3" href="https://github.com/kristinakarrass" target="blank"><img src="./assets/images/github.png" alt="Github" id="links"></a><a class="grey-text text-lighten-3" href="https://linkedin.com/in/kristina-karrass" target="blank"><img src="./assets/images/linkedin.png" alt="Linkedin" id="links"></a></li>
                     </ul>
                 </div>
             </div>
