--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
     <!-- ==============================================================NAVBAR=========================================================================-->
     <nav>
         <div class="nav-wrapper black">
-            <a href="#" class="brand-logo">Kristina Karrass</a>
+            <a href="https://kristinakarrass.github.io/" class="brand-logo">Kristina Karrass</a>
             <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="#aboutMe">About Me</a></li>                
-                <li><a href="#projects">Projects</a></li>                
-                <li><a href="https://github.com/kristinakarrass" target="blank">Github</a></li>
-                <li><a href="https://linkedin.com/in/kristina-karrass" target="blank">Linkedin</a></li>
+                <li><a href="#projects">Projects</a></li> 
+                <li><a href="#contact">Contact</a></li>               
             </ul>
             <ul class="side-nav" id="mobile-demo">
                 <li><a href="#aboutMe">About Me</a></li>
@@ -199,7 +198,7 @@
                     <p class="grey-text text-lighten-2">Full Stack Developer</p>
                 </div>
                 <div class="col l4 offset-l2 s12">
-                    <h5 class="grey-text text-lighten-2">Visit me on:</h5>
+                    <h5 class="grey-text text-lighten-2 section scrollspy" id="contact">Visit me on:</h5>
                     <ul>
                         <span><li><a class="grey-text text-lighten-3" href="https://github.com/kristinakarrass" target="blank"><img src="./assets/images/github.png" alt="Github" id="links"></a><a class="grey-text text-lighten-3" href="https://linkedin.com/in/kristina-karrass" target="blank"><img src="./assets/images/linkedin.png" alt="Linkedin" id="links"></a></li>
                     </ul>
