--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             </ul>
             <ul class="side-nav" id="mobile-demo">
                 <li><a href="#aboutMe">About Me</a></li>
-                <li><a href="#projects">Projects</a></li>                
+                <li><a href="#projects">Projects</a></li> 
+                <li><a href="#contact">Contact</a></li>               
                 <li><a href="https://github.com/kristinakarrass" target="blank">GitHub</a></li>
                 <li><a href="https://linkedin.com/in/kristina-karrass" target="blank">Linkedin</a></li>
             </ul>
