--- a/index.html
+++ b/index.html
@@ -52,6 +52,51 @@
             <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image">
+                        <a href="https://github.com/kristinakarrass/NYTimes_React" target="blank"><img src="assets/images/NYTReact.png"></a>
+                    </div>
+                    <div class="card-content">
+                        <h5>NYT MERN App</h5>
+                        <p>This app uses MongoDB, Express, React and Node. Users can search for and save articles from the New York Times archives.</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="https://nyt-reactapp.herokuapp.com/" target="blank">Check it out!</a>
+                        <a href="https://github.com/kristinakarrass/NYTimes_React" target="blank" class="right github">GitHub Repo</a>
+                    </div>
+                </div>
+            </div>             
+            <div class="col s12 m6 l4">
+                <div class="card">
+                    <div class="card-image">
+                        <a href="https://github.com/Doppelganger-App/Doppelganger" target="blank"><img src="assets/images/doppel.png"></a>
+                    </div>
+                    <div class="card-content">
+                        <h5>Doppelgänger</h5>
+                        <p>This app lets users discover current news articles, youtube videos and podcasts taylored to their opposite interest to help them discover their alternative "me".</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="https://doppelgaenger.herokuapp.com/" target="blank">Check it out!</a>
+                        <a href="https://github.com/Doppelganger-App/Doppelganger" target="blank" class="right github">GitHub Repo</a>
+                    </div>
+                </div>
+            </div>            
+            <div class="col s12 m6 l4">
+                <div class="card">
+                    <div class="card-image">
+                        <a href="https://github.com/kristinakarrass/NPR-News-App" target="blank"><img src="assets/images/npr.png"></a>
+                    </div>
+                    <div class="card-content">
+                        <h5>NPR News Scraper</h5>
+                        <p>News scraping app that gets the latest articles from NPR.org with Cheerio and saves articles and notes on articles in a MongoDB. The UI is built with Handlebars.</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="https://npr-news-app.herokuapp.com/" target="blank">Check it out!</a>
+                        <a href="https://github.com/kristinakarrass/NPR-News-App" target="blank" class="right github">GitHub Repo</a>
+                    </div>
+                </div>
+            </div>   
+            <div class="col s12 m6 l4">
+                <div class="card">
+                    <div class="card-image">
                         <a href="https://kristinakarrass.github.io/Hangman/" target="blank"><img src="assets/images/hangman.png"></a>
                     </div>
                     <div class="card-content">
@@ -63,22 +108,22 @@
                         <a href="https://github.com/kristinakarrass/TriviaGame" target="blank" class="right github">GitHub Repo</a>
                     </div>
                 </div>
-            </div>            
+            </div>  
             <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image">
-                        <a href="https://kristinakarrass.github.io/Psychic-Game/" target="blank"><img src="assets/images/psychic.png"></a>
+                        <a href="https://github.com/kristinakarrass/TrainScheduler" target="blank"><img src="assets/images/train.png"></a>
                     </div>
                     <div class="card-content">
-                        <h5>Psychic Game</h5>
-                        <p>The Psychic game introduced JavaScript to my projects. The user has nine guesses to figure out which letter the computer randomly picked.</p>
+                        <h5>Train Scheduler</h5>
+                        <p>Firebase powered app that lets users save trains to and delete them from the database. The UI is a bootstrap theme customized to the apps needs.</p>
                     </div>
                     <div class="card-action">
-                        <a href="https://kristinakarrass.github.io/Psychic-Game/" target="blank">Play the game!</a>
-                        <a href="https://github.com/kristinakarrass/TriviaGame" target="blank" class="right github">GitHub Repo</a>
+                        <a href="https://kristinakarrass.github.io/TrainScheduler/" target="blank">Check it out!</a>
+                        <a href="https://github.com/kristinakarrass/TrainScheduler" target="blank" class="right github">GitHub Repo</a>
                     </div>
                 </div>
-            </div>
+            </div>          
             <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image">
@@ -102,26 +147,11 @@
                     </div>
                     <div class="card-content">
                         <h5>Trivia Game</h5>
-                        <p>The Trivia Game first introduced me to the world of AJAX calls. The pictures on the answer screen are retrieved from the Ghetty institute's API.</p>
+                        <p>The Trivia Game first introduced me to the world of AJAX calls. The pictures on the answer screen are retrieved from Getty Images' API.</p>
                     </div>
                     <div class="card-action">
                         <a href="https://kristinakarrass.github.io/TriviaGame/" target="blank">Play the game!</a>
                         <a href="https://github.com/kristinakarrass/TriviaGame" target="blank" class="right github">GitHub Repo</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col s12 m6 l4">
-                <div class="card">
-                    <div class="card-image">
-                        <a href="https://github.com/kristinakarrass/TrainScheduler" target="blank"><img src="assets/images/train.png"></a>
-                    </div>
-                    <div class="card-content">
-                        <h5>Train Scheduler</h5>
-                        <p>Firebase powered app that lets users save trains to and delete them from the database. The UI is a bootstrap theme customized to the apps needs.</p>
-                    </div>
-                    <div class="card-action">
-                        <a href="https://kristinakarrass.github.io/TrainScheduler/" target="blank">Check it out!</a>
-                        <a href="https://github.com/kristinakarrass/TrainScheduler" target="blank" class="right github">GitHub Repo</a>
                     </div>
                 </div>
             </div>
@@ -143,45 +173,15 @@
             <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image">
-                        <a href="https://github.com/kristinakarrass/NPR-News-App" target="blank"><img src="assets/images/npr.png"></a>
+                        <a href="https://kristinakarrass.github.io/Psychic-Game/" target="blank"><img src="assets/images/psychic.png"></a>
                     </div>
                     <div class="card-content">
-                        <h5>NPR News Scraper</h5>
-                        <p>News scraping app that gets the latest articles from NPR.org with Cheerio and saves articles and notes on articles in a MongoDB. The UI is built with Handlebars.</p>
+                        <h5>Psychic Game</h5>
+                        <p>The Psychic game introduced JavaScript to my projects. The user has nine guesses to figure out which letter the computer randomly picked.</p>
                     </div>
                     <div class="card-action">
-                        <a href="https://npr-news-app.herokuapp.com/" target="blank">Check it out!</a>
-                        <a href="https://github.com/kristinakarrass/NPR-News-App" target="blank" class="right github">GitHub Repo</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col s12 m6 l4">
-                <div class="card">
-                    <div class="card-image">
-                        <a href="https://github.com/Doppelganger-App/Doppelganger" target="blank"><img src="assets/images/doppel.png"></a>
-                    </div>
-                    <div class="card-content">
-                        <h5>Doppelgänger</h5>
-                        <p>This app lets users discover current news articles, youtube videos and podcasts taylored to their opposite interest to help them discover their alternative "me".</p>
-                    </div>
-                    <div class="card-action">
-                        <a href="https://doppelgaenger.herokuapp.com/" target="blank">Check it out!</a>
-                        <a href="https://github.com/Doppelganger-App/Doppelganger" target="blank" class="right github">GitHub Repo</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col s12 m6 l4">
-                <div class="card">
-                    <div class="card-image">
-                        <a href="https://github.com/kristinakarrass/NYTimes_React" target="blank"><img src="assets/images/NYTReact.png"></a>
-                    </div>
-                    <div class="card-content">
-                        <h5>NYT MERN App</h5>
-                        <p>This app uses MongoDB, Express, React and Node. Users can search for and save articles from the New York Times archives.</p>
-                    </div>
-                    <div class="card-action">
-                        <a href="https://nyt-reactapp.herokuapp.com/" target="blank">Check it out!</a>
-                        <a href="https://github.com/kristinakarrass/NYTimes_React" target="blank" class="right github">GitHub Repo</a>
+                        <a href="https://kristinakarrass.github.io/Psychic-Game/" target="blank">Play the game!</a>
+                        <a href="https://github.com/kristinakarrass/TriviaGame" target="blank" class="right github">GitHub Repo</a>
                     </div>
                 </div>
             </div>
@@ -199,7 +199,7 @@
                     <p class="grey-text text-lighten-2">Full Stack Developer</p>
                 </div>
                 <div class="col l4 offset-l2 s12">
-                    <h5 class="grey-text text-lighten-2 section scrollspy" id="contact">Visit me on:</h5>
+                    <h5 class="grey-text text-lighten-2 section scrollspy" id="contact">Visit or Contact me:</h5>
                     <ul>
                         <span><li><a class="grey-text text-lighten-3" href="https://github.com/kristinakarrass" target="blank"><img src="./assets/images/github.png" alt="Github" id="links"></a><a class="grey-text text-lighten-3" href="https://linkedin.com/in/kristina-karrass" target="blank"><img src="./assets/images/linkedin.png" alt="Linkedin" id="links"></a></li>
                     </ul>
