--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                     <p class="grey-text text-lighten-2">Full Stack Developer</p>
                 </div>
                 <div class="col l4 offset-l2 s12">
-                    <h5 class="grey-text text-lighten-2 section scrollspy" id="contact">Visit or Contact me:</h5>
+                    <h5 class="grey-text text-lighten-2 section scrollspy" id="contact">Contact Links:</h5>
                     <ul>
                         <span><li><a class="grey-text text-lighten-3" href="https://github.com/kristinakarrass" target="blank"><img src="./assets/images/github.png" alt="Github" id="links"></a><a class="grey-text text-lighten-3" href="https://linkedin.com/in/kristina-karrass" target="blank"><img src="./assets/images/linkedin.png" alt="Linkedin" id="links"></a></li>
                     </ul>
