--- a/index.html
+++ b/index.html
@@ -143,15 +143,15 @@
             <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image">
-                        <a href="https://kristinakarrass.github.io/TriviaGame/" target="blank"><img src="assets/images/trivia.png"></a>
+                        <a href="https://github.com/kristinakarrass/Bamazon" target="blank"><img src="assets/images/bamazon.png"></a>
                     </div>
                     <div class="card-content">
-                        <h5>Trivia Game</h5>
-                        <p>The Trivia Game first introduced me to the world of AJAX calls. The pictures on the answer screen are retrieved from Getty Images' API.</p>
+                        <h5>Bamazon CLI storefront</h5>
+                        <p>CLI storefront with three options. Customers can see and purchase items, managers can see and add to inventory and executives can see department sales.</p>
                     </div>
                     <div class="card-action">
-                        <a href="https://kristinakarrass.github.io/TriviaGame/" target="blank">Play the game!</a>
-                        <a href="https://github.com/kristinakarrass/TriviaGame" target="blank" class="right github">GitHub Repo</a>
+                        <a href="#" target="blank"></a>
+                        <a href="https://github.com/kristinakarrass/Bamazon" target="blank" class="right github">GitHub Repo</a>
                     </div>
                 </div>
             </div>
@@ -173,15 +173,15 @@
             <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image">
-                        <a href="https://kristinakarrass.github.io/Psychic-Game/" target="blank"><img src="assets/images/psychic.png"></a>
+                        <a href="https://github.com/kristinakarrass/StarWarsRPG" target="blank"><img src="assets/images/starwars.png"></a>
                     </div>
                     <div class="card-content">
-                        <h5>Psychic Game</h5>
-                        <p>The Psychic game introduced JavaScript to my projects. The user has nine guesses to figure out which letter the computer randomly picked.</p>
+                        <h5>Star Wars RPG</h5>
+                        <p>This game features villains and heroes from Star Wars in an epic battle and is powered by JavaScript and jQuery for gaming functionality.</p>
                     </div>
                     <div class="card-action">
-                        <a href="https://kristinakarrass.github.io/Psychic-Game/" target="blank">Play the game!</a>
-                        <a href="https://github.com/kristinakarrass/TriviaGame" target="blank" class="right github">GitHub Repo</a>
+                        <a href="https://kristinakarrass.github.io/StarWarsRPG/" target="blank">Play the game!</a>
+                        <a href="https://github.com/kristinakarrass/StarWarsRPG" target="blank" class="right github">GitHub Repo</a>
                     </div>
                 </div>
             </div>
@@ -201,7 +201,15 @@
                 <div class="col l4 offset-l2 s12">
                     <h5 class="grey-text text-lighten-2 section scrollspy" id="contact">Contact Links:</h5>
                     <ul>
-                        <span><li><a class="grey-text text-lighten-3" href="https://github.com/kristinakarrass" target="blank"><img src="./assets/images/github.png" alt="Github" id="links"></a><a class="grey-text text-lighten-3" href="https://linkedin.com/in/kristina-karrass" target="blank"><img src="./assets/images/linkedin.png" alt="Linkedin" id="links"></a></li>
+                        <span>
+                          <li>
+                            <a class="grey-text text-lighten-3" href="https://github.com/kristinakarrass" target="blank"><img src="./assets/images/github.png" alt="Github" id="links"></a>
+
+                            <a class="grey-text text-lighten-3" href="https://linkedin.com/in/kristina-karrass" target="blank"><img src="./assets/images/linkedin.png" alt="Linkedin" id="links"></a>
+
+                            <a class="grey-text text-lighten-3" href="#" target="blank"><img src="./assets/images/email.png" alt="email" id="links"></a>
+                          </li>
+                          </span>
                     </ul>
                 </div>
             </div>
