--- a/index.html
+++ b/index.html
@@ -158,15 +158,15 @@
             <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image">
-                        <a href="https://github.com/kristinakarrass/DevTools" target="blank"><img src="assets/images/devtools.png"></a>
+                        <a href="https://github.com/DevToolsProject/DevTools" target="blank"><img src="assets/images/devtools.png"></a>
                     </div>
                     <div class="card-content">
                         <h5>Devtools</h5>
                         <p>App for developers who would like to save coding related Youtube videos, GitHub repos or Reddit articles. Firebase, AJAX calls to GitHub, Reddit and Youtube.</p>
                     </div>
                     <div class="card-action">
-                        <a href="https://kristinakarrass.github.io/DevTools/" target="blank">Check it out!</a>
-                        <a href="https://github.com/kristinakarrass/DevTools" target="blank" class="right github">GitHub Repo</a>
+                        <a href="https://devtoolsproject.github.io/DevTools/" target="blank">Check it out!</a>
+                        <a href="https://github.com/DevToolsProject/DevTools" target="blank" class="right github">GitHub Repo</a>
                     </div>
                 </div>
             </div>
